css/style.css
html main body header {
  overflow: auto;
}

a {
  text-decoration: none !important;
  color:black !important;
}

p {
  font-size: 16px;
}

ul {
  list-style-type: none;
  margin-block-start: initial;
  margin-block-end: initial;
  margin-inline-start: initial;
  margin-inline-end: initial;
  padding-inline-start: initial;
}


/*img {
    display: block;
    max-width: 100%;
    margin: 0 0 1rem;
    border-radius: 5px;
}*/

h1 {
  display: block;
  color: #000000;
/*  font-weight: bold;
  font-family: 'Roboto', sans-serif; */

}


h2 {
  font-family: 'Roboto', sans-serif;  
}

.container {
  font-family: 'Roboto', sans-serif !important;  

}
.nav-container{
  display:-webkit-flex;
  display: flex;
  flex-direction: column;
  margin-left: auto;
  margin-right: auto;
/*  justify-content: space-between;
*/}

.menu-icon {
  display:none;
}

.navlogo {
  background-color: white !important;
  font-size:36px;
  padding:10px;
  margin-left:15px;
  margin-right:15px;
  font-family: 'Libre Barcode 39 Text';
}

.nav-container a:not(.navlogo){
  display:block;
  margin: 5px;
  padding:15px;
  font-size: 20px;
  color: black !important;
  text-decoration: none;
  font-family: 'Roboto', sans-serif;
}

.nav-container a:hover, a:active, a:focus{
  background-color: #eee;
}

ul {
  list-style-type: none;
}

.project, .project-header {
    padding-bottom: 15px;
}

.project-container {
  padding-left: 15px;
  padding-right: 15px;
  margin-right:auto;
  margin-left:auto;
}

.project-title {
    font-size: 18px;
    font-weight: 700;
    display: inline-block;
}

.project-date {
    color: blue;
    font-size: 13px;
    display: inline-block;
    padding-left: 5px;
}
.label {
  background-color: blue;
}

.project-image {
    max-height: 200px;
    margin-left: auto;
    margin-right: auto;
}

.project-title-row a {
    color: #303030;
    font-size: 20px;
}

.contact-intro {
  display:grid;
  grid-template-columns: 300px 1fr;
}
.contact-intro p {
  padding: 30px;
  font-size: 20px;
  font-family: 'Roboto', sans-serif;  
  vertical-align: middle;
  text-align: center;
}

.contact-intro img {
  max-width: 300px; 
  border-radius: 50%;
  margin-left: auto;
  margin-right: auto;
}

.contact-items {
  display: flex;
  flex-direction: row;
  justify-content: space-evenly;
  font-size: 30px;

}

/*.contact-container {
  display:-webkit-flex;
  display: flex;
  padding: 20px;
  flex-direction: column;
  justify-content: space-between;

}

.contact-container > a, i {
  color: black;
  background-color: rgba(255, 255, 255, 0.8);
  padding: 20px;
  text-decoration: none;
  font-size: 30px;
  height:150px;
  width: auto;
  font-family: 'Roboto', sans-serif;  
}
.contact-container > img {*/

/*  color: black;
  background-color: rgba(255, 255, 255, 0.8);*/
/*  padding: 20px;
  text-decoration: none;*/
/*  font-size: 30px;
  width: auto;
  font-family: 'Roboto', sans-serif; */
}
/*.contact-container > p {
  font-size: 30px;
}*/

.picture {
border: 1px solid;
/*width: 100px; */
height:200px;
/*suggest a min-width & min-height*/
}


.pheader {
	margin-top: 50px
}

.gallery-container {
  display:-webkit-flex;
  display: flex;
  padding: 20px;
  flex-direction: row;
  flex-wrap: wrap;
}
.gallery-container > img {
  width: 300px;
  height: 300px;
  padding: 50px;
}
.gallery-container > img:hover {
  width: 300px;
  height: 300px;
  padding: 48px;
  border: 2px solid blue;
}

a.skip-main {
    left:-999px;
    position:absolute;
    top:auto;
    width:1px;
    height:0px;
    overflow:hidden;
    z-index:-999;
}
a.skip-main:focus, a.skip-main:active {
    color: #fff;
    background-color:#000;
    left: auto;
    top: auto;
    width: 30%;
    height: 0px;
    overflow:auto;
    margin: 10px 35%;
    padding:5px;
    border-radius: 15px;
    border:4px solid yellow;
    text-align:center;
    font-size:1.2em;
    z-index:999;
}


.edu-container {
  display: flex;
  display:-webkit-flex;
  flex-flow: row wrap;
  justify-content: space-between;
}

.flip-card {
  background-color: transparent;
  width: 255px;
  height: 255px;
  perspective: 1000px;
  padding:20px;
  margin-left: auto;
  margin-right: auto;
  tab-index: 1;
}

.flip-card-inner {
  position: relative;
/*  width: 100%;
  height: 100%;*/
  text-align: center;
  transition: transform 0.6s;
  transform-style: preserve-3d;
  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
}

.flip-card:hover .flip-card-inner {
  transform: rotateY(180deg);
}

.flip-card-front, .flip-card-back {
  position: absolute;
  width: 100%;
  height: 100%;
  backface-visibility: hidden;

  -webkit-perspective: 0;
  -webkit-backface-visibility: hidden;
  -webkit-transform: translate3d(0,0,0);
  visibility:visible;
}

.flip-card-front {
  background-color: #bbb;
  color: black;
  z-index: 2;
}

.flip-card-back {
/*  background-color: #2980b9;*/
  color: black;
  transform: rotateY(180deg);
  z-index: 1;

}

#travelplan {
  display:block;
  margin-left: auto;
  margin-right: auto;
}

/* Slideshow */
* {box-sizing:border-box}

/* Slideshow container */
.slideshow-container {
  max-width: 636px;
  position: relative;
  margin-left:auto;
  margin-right:auto;
}

/* Hide the images by default */
.mySlides {
  display: none;
}

/* Next & previous buttons */
.prev, .next {
  cursor: pointer;
  position: absolute;
  top: 50%;
  width: auto;
  margin-top: -22px;
  padding: 16px;
  color: white;
  font-weight: bold;
  font-size: 18px;
  transition: 0.6s ease;
  border-radius: 0 3px 3px 0;
  user-select: none;
}

/* Position the "next button" to the right */
.next {
  right: 0;
  border-radius: 3px 0 0 3px;
}

/* On hover, add a black background color with a little bit see-through */
/*.prev:hover, .next:hover {
  background-color: rgba(0,0,0,0.8);
}*/

/* Caption text */
.text {
  color: #f2f2f2;
  font-size: 15px;
  padding: 8px 12px;
  position: absolute;
  bottom: 8px;
  width: 100%;
  text-align: center;
}

/* Number text (1/3 etc) */
.numbertext {
  color: #f2f2f2;
  font-size: 12px;
  padding: 8px 12px;
  position: absolute;
  top: 0;
}

/* The dots/bullets/indicators */
.dot {
  cursor: pointer;
  height: 15px;
  width: 15px;
  margin: 0 2px;
  background-color: #bbb;
  border-radius: 50%;
  display: inline-block;
  transition: background-color 0.6s ease;
}

.link-text {
  font-size:0;
}

/*.contact-items {
  font-size:0;
  width:0px;
}*/

/* Fading animation */
.fade {
  -webkit-animation-name: fade;
  -webkit-animation-duration: 1.5s;
  animation-name: fade;
  animation-duration: 1.5s;
}





@-webkit-keyframes fade {
  from {opacity: .4} 
  to {opacity: 1}
}

@keyframes fade {
  from {opacity: .4} 
  to {opacity: 1}
}

@media only screen and (max-width: 375px) {
    #travelplan {
    max-width: 375px;
  }
}

/* Extra small devices (phones, 600px and down) */
@media only screen and (max-width: 767px) {
/*  .navlogo {
    margin: auto !important;
    padding:auto !important;
  }
  */
  .navlogo {
    display:block;
    white-space: nowrap;
    text-align: center;
    margin-left: auto !important;
    margin-right: auto !important;
  }
  .contact-intro {
    grid-template-columns: initial;
    grid-template-rows: 300px 1fr;
  }
  .nav-container a:not(.navlogo) {
    display: block !important;
  }
  .nav-container-responsive {
    font-size: 20px;
    color: black !important;
    text-decoration: none;
    font-family: 'Roboto', sans-serif;
  }
  .nav-container-responsive a:not(.navlogo){
    display:none;
  }
  .menu-icon {
    display:block !important;
    position: absolute;
    top: 5px;
    left: -5px;
    font-size: 45px;
  }
} 

/* Medium devices (landscape tablets, 768px and up) */
@media only screen and (min-width: 768px) {
  #spacer {
    visibility: hidden;
    flex-grow: 1;    
  }
  .nav-container {
    position: fixed; /* Set the navbar to fixed position */
    top: 0; /* Position the navbar at the top of the page */
    width: 100%;
    background-color: white !important;
    z-index: 500;
    flex-direction: row !important;
  }
  .nav-container a:not(.navlogo) {
    flex-direction: row !important;  
  }

} 

/* Large devices (laptops/desktops, 992px and up) */
@media only screen and (min-width: 992px) {
  #spacer {
    visibility: hidden;
    flex-grow: 1;    
  }
  .nav-container {
    position: absolute;
    top: auto;
    z-index: 0;
  }
} 

@media print {
  body:after{
    content:url(http://chart.googleapis.com/chart?cht=qr&chs=200x200&choe=UTF-8&chld=H&chl= \
      <https://jackstephenson96.github.io/psite/index.html>)
  }
}
/* Extra large devices (large laptops and desktops, 1200px and up) */
/*@media only screen and (min-width: 1200px) {...}*/

